--- a/Letter game/index.html
+++ b/Letter game/index.html
@@ -14,7 +14,7 @@
 <div id="form">
 
 
-  <input id="input" input="sdas" type="text" placeholder="Enter word" name="solution" >
+  <input id="input" input="sdas" type="text" placeholder="Enter word" name="solution" ></input>
 
 
   <input id="button" type="submit" name="submit" value="Submit answer">
